# whisper_ai

./: .dockerignore  .gitignore  Dockerfile.whispercpp  LICENSE  README.md  pyproject.toml  ytx.sh
examples/bhagavad_gita_chapter3/: README.md  meta.json  transcript_devanagari_excerpt.srt  transcript_devanagari_excerpt.txt  transcript_excerpt.srt  transcript_excerpt.txt
image/: transcribe_url.sh
scripts/: postprocess.py
ytx/: __init__.py  __main__.py  docker_manager.py  metadata.py
